[tool.poetry]
name = "digi"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
streamlit = "^1.40.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
